finnaly solved the bigg error on dark mode and logout button

--- a/public/home/Login&signup.css
+++ b/public/home/Login&signup.css
@@ -4,20 +4,19 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "poppins";
-    color: #fff;
+    color: var(--secondary-color);
 
 }
 .error{
     color: red;
 }
-
 #loginbody{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     /* background:#25252b; */
-    background: black;
+    background: var(--primary-color);
 
 }
 .container
@@ -129,9 +128,9 @@
     background: transparent;
     outline: none;
     font-size: 16px;
-    color: #fff;
+    color: var(--secondary-color);
     font-weight: 600;
-    border-bottom: 2px solid #fff;
+    border-bottom: 2px solid var(--secondary-color);
     padding-right: 23px;
     transition: .5s;
     border-top: none;
@@ -152,7 +151,7 @@
     left: 0;
     transform: translateY(-50%);
     font-size: 16px;
-    color: #fff;
+    color: var(--secondary-color);
     transition: .5s;
 }
 .input-box input:focus ~ label,
@@ -310,7 +309,7 @@
     top: -5px;
     height: 600px;
     width: 850px;
-    background: linear-gradient(45deg,#25252b,#3ed9d9);
+    background: linear-gradient(45deg,var(--primary-color),#3ed9d9);
     transform: rotate(10deg) skewY(40deg) ;
     transform-origin: bottom right;
     transition: 1.5s ease;
@@ -328,7 +327,7 @@
     top: 100%;
     height: 700px;
     width: 850px;
-    background: #25252b;
+    background: var(--primary-color);
     border-top: 3px solid #3ed9d9;
     transform: rotate(0deg) skewY(0deg) ;
     transform-origin: bottom left;
@@ -378,4 +377,16 @@
      }
     
 }
+
+@media((min-width:500px) and (max-width:660px))
+{
+    .info-content.Register {
+        
+        
+        padding: 0 24px 60px 40px;
+        
+    } 
+}
+
+
 
